<resources>
    <string name="app_name">TodoApp</string>
    <string name="msg_add_new_item">Add New Item</string>
    <string name="hint_item_name">Item Name</string>
    <string name="button_lbl_loading">Saving…</string>
    <string name="button_lbl_save">Save</string>
    <string name="lbl_all_items">All Items</string>
    <string name="lbl_last_modified">Last Modified on %1$s</string>
    <string name="lbl_item_completed_date">Completed on %1$s</string>
    <string name="lbl_items_to_do">Items To Do</string>
    <string name="lbl_completed_items">Completed Items</string>
    <string name="msg_error_occurred">An error occurred. Please try again</string>
    <string name="err_item_name_empty">Item name can\'t be empty</string>
    <string name="msg_add_an_item">Add an item</string>
    <string name="msg_add_description">Add description</string>
    <string name="ellipsis" msgid="7899829516048813237">…</string>
    <string name="ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.</string>
    <string name="ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At auctor urna nunc id. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Faucibus nisl tincidunt eget nullam non nisi. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Venenatis lectus magna fringilla urna porttitor. In eu mi bibendum neque egestas congue. Risus at ultrices mi tempus. Integer eget aliquet nibh praesent. Egestas purus viverra accumsan in nisl nisi. Sagittis nisl rhoncus mattis rhoncus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Cursus metus aliquam eleifend mi in. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Et netus et malesuada fames ac turpis egestas. Sit amet volutpat consequat mauris nunc.</string>
    <string name="delete_dialog_title">Are you sure you want to delete this item?</string>
    <string name="delete_dialog_message">This operation can\'t be undone</string>
    <string name="clear_items_dialog_title">Are you sure?</string>
    <string name="exit_dialog_message">You\'ve made some changes that haven\'t been saved. Do you want to save them?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_added_on">Added on %1$s</string>
    <string name="msg_modified_on">Last modified on %1$s</string>
    <string name="msg_completed_on">Completed on %1$s</string>
    <string name="title_information">Information:</string>
    <string name="cancel">Cancel</string>
    <string name="add_list">Add List</string>
    <string name="list_name">List Name</string>
    <string name="add">Add</string>
    <string name="err_list_name_empty">List name can\'t be empty</string>
    <string name="some_error_occurred">Some Error Occurred</string>
    <string name="msg_todo_lists_empty">No lists added. To start, click on the \"Add List\" option below</string>
    <string name="msg_todos_empty">No Items to show. To add an item, click on the \"Add Item\" option below</string>
    <string name="msg_list_added_successfully">List Added!</string>
    <string name="msg_item_deleted">Item Deleted</string>
    <string name="undo">Undo</string>
    <string name="completed_items_deleted">Completed items deleted successfully!</string>
    <string name="all_items_deleted">All items deleted successfully!</string>
    <string name="list_deleted">List deleted successfully!</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_delete_completed_items">Delete Completed items</string>
    <string name="menu_title_delete_all_items">Delete All items</string>
    <string name="menu_title_delete_list">Delete List</string>
    <string name="settings">Settings</string>
    <string name="all_lists">All Lists</string>
</resources>
