<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="AddTodoListBinding" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingLeft="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/list_name"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textColor="#2E2E2E"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="My Tweets">

            <requestFocus />

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_list_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/msg_add_description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="5"
                android:paddingLeft="8dp"
                android:singleLine="false"
                android:textColor="#8b8b8b"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/et_list_name"
                tools:text="Draft of my tweets to post"
                tools:visibility="visible" />

        <FrameLayout
                android:id="@+id/fl_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_list_description"
                tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_show_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginLeft="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:button="@drawable/checkbox_description"
                    android:checked="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:textOff=""
                    android:textOn="" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_todo_list"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>